<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignInFragment">

    <LinearLayout
        android:id="@+id/usernamepass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_person"
                android:background="@android:color/transparent"
                android:hint="@string/username_hint_text"
                android:drawablePadding="10dp"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_baseline_security"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgotpasstxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgetpas_text"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:layout_below="@+id/usernamepass_layout"
        android:layout_centerHorizontal="true"
        android:background="@drawable/signin_bg"
        android:text="@string/sign_in_text" />

    <TextView
        android:id="@+id/open_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/donthaveaccount_text"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/txt_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/or_signin_text"
        android:textSize="18dp" />

    <LinearLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:id="@+id/signin_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/signin_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facebook"/>

        <Button
            android:id="@+id/signin_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:minWidth="100dp"
            android:maxWidth="150dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>
</RelativeLayout>