<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/usernamepass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_person"
                    android:background="@android:color/transparent"
                    android:hint="@string/username_hint_text"
                    android:drawablePadding="10dp"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_security"
                    android:drawablePadding="10dp"
                    android:hint="@string/password_hint_text"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_security"
                    android:drawablePadding="10dp"
                    android:hint="@string/confirmpassword_hint_text"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/_term"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/usernamepass_layout"

            android:layout_centerHorizontal="true"
            android:paddingTop="20dp">
            <CheckBox
                android:id="@+id/checkbox_term"
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/txt_term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/checkbox_term"
                android:gravity="center_horizontal"
                android:text="@string/term_text"
                android:textSize="18dp" />
        </RelativeLayout>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/_term"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_text"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/txt_backto_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/signup_btn"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/alreadyhaveaccount_text"
            android:textSize="18dp" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>